--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "react-scripts start",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
   "dependencies": {
     "emojis": "^1.0.10",
